@@ -11,6 +11,9 @@ What's New for PSPRadio
 (raf) Some more work on the OGG decoder.
 (raf) Now TextUI will display selectable lists for playlist and playlist entries
 (raf) Made the current selections more dynamic so they follow the list.
+(raf) Changed user interface for playlist access: User now uses UP/DOWN to select a playlist, then
+press X or O to go and select an entry. Navigation in entries box is also with UP/DOWN.
+User can also use <- or -> to go back and forth between List and Entries.
 
 0.36-pre1 (r336)
 ------------------------------------------------------------------------
